tenants/payments/payments-namespace.yaml
# Namespace: Tạo namespace payments
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    policy.sigstore.dev/include: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "0"
